objects/asb_ListingActivity__c.object
<CustomObject><fields>
        <fullName>AssetType__c</fullName>
        <description>The type of asset that was viewed on the listing.</description>
        <formula>ListingAsset__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of asset that was viewed on the listing.</inlineHelpText>
        <label>Asset Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the same type of activity was taken by the same user on the same listing within the last 180 days.</description>
        <inlineHelpText>Indicates if the same type of activity was taken by the same user on the same listing within the last 180 days.</inlineHelpText>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ListingAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The listing asset that was accessed if applicable.</description>
        <inlineHelpText>The listing asset that was accessed if applicable.</inlineHelpText>
        <label>Listing Asset</label>
        <referenceTo>asb_ListingAsset__c</referenceTo>
        <relationshipLabel>Listing Activities</relationshipLabel>
        <relationshipName>Listing_Activities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>asb_Listing__c</fullName>
        <description>The listing on which the activity occurred.</description>
        <inlineHelpText>The listing on which the activity occurred.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>asb_Listing__c</referenceTo>
        <relationshipLabel>Listing Activities</relationshipLabel>
        <relationshipName>Listing_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Tracks user activity (e.g. install) on each listing in the store.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Listing Activity</label><nameField>
        <displayFormat>LA-{0}</displayFormat>
        <label>Listing Activity Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Listing Activities</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><recordTypes>
        <fullName>AssetView</fullName>
        <active>true</active>
        <description>Viewed a listing asset.</description>
        <label>AssetView</label>
    </recordTypes><recordTypes>
        <fullName>Install</fullName>
        <active>true</active>
        <description>Installed the app.</description>
        <label>Install</label>
    </recordTypes><recordTypes>
        <fullName>PageView</fullName>
        <active>true</active>
        <description>Viewed the listing page.</description>
        <label>PageView</label>
    </recordTypes></CustomObject>